# model-archival

./: .gitignore  README.md  run-report-2026-03-04_17-11-45.md  run-report-2026-03-04_17-12-59.md  run-report-2026-03-04_17-27-26.md  run-report-2026-03-04_17-27-48.md  run.sh
fingerprints/: .gitignore  README.md  pyproject.toml  run.sh
fingerprints/config/: curated.yaml  registry.yaml
fingerprints/cross-leaderboard/2026-03-15/: cross-leaderboard.csv
fingerprints/leaderboard-snapshots/2026-03-13/: README.md  leaderboard.csv
fingerprints/scripts/: build_registry.py  collect_cross_leaderboard.py  gen-manifest.py  snapshot_leaderboard.py  snapshot_lmsys_arena.py
fingerprints/src/fingerprints/: __init__.py  cli.py  crawler.py  models.py  state.py  storage.py
local/: README.md  pyproject.toml  run.sh
local/config/: drives.yaml  registry-legacy.yaml  registry.yaml  registry_high_risk.yaml
local/deploy/: _common.sh  disk-setup-report-2026-03-04_17-15-10.md  disk-setup-report-2026-03-04_17-15-20.md  install-surfshark-dinit.sh  install-surfshark-sysvinit.sh  proxmox-attach-disks.sh  remove-surfshark-flatpak.sh  setup-mxlinux.sh
local/docs/: ARCHITECTURE.md  DEPLOYMENT.md  HF-TOKEN-GUIDE.md  MODEL-SELECTION-PROMPT.md  MODEL-SOURCES.md  OPERATIONS.md  PROJECT_PROMPT.md  REQUIREMENTS.md  STORAGE-AND-CAPACITY.md
local/scripts/: archive-tooling.sh  archiver-drives.sh  archiver-list.sh  archiver-restart.sh  archiver-verify.sh  check-environment.sh  gen-manifest.py  run.sh  stop.sh
local/src/archiver/: aria2_manager.py  cli.py  (+7 more)
local/verification/: verify-archive.py
(+67 files in other folders)
